# mcpgen

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  mcpgen.yaml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: CONFIG_COMPATIBILITY.md
examples/: jsonplaceholder.openapi.yaml  openapi.yaml
examples/billing-api/: README.md  mcpgen.yaml  openapi.yaml  routing_eval.yaml
examples/github-like/: README.md  mcpgen.yaml  openapi.yaml  routing_eval.yaml
examples/jsonplaceholder/: README.md  mcpgen.yaml  routing_eval.yaml
mcpgen/: __init__.py
mcpgen/cli/: __init__.py  main.py
mcpgen/core/: __init__.py  catalog.py  config.py  doctor.py  generator.py  init_project.py  inspector.py  models.py  parser.py  routing_eval.py  smoke.py  tool_generator.py  tool_selection.py  watchdog.py
mcpgen/runtime/: __init__.py  audit.py  circuit_breaker.py  dry_run.py  embedding.py  executor.py  failure.py  metrics.py  mock.py  policy.py  rate_limit.py  registry.py  retry.py  router.py  safety.py  validation.py
mcpgen/templates/: __init__.py  fastapi_server.py  mcp_server.py
tests/: test_audit.py  test_catalog.py  test_circuit_breaker.py  test_cli.py  test_config.py  test_doctor.py  test_dry_run.py  test_embedding.py  test_executor.py  test_failure.py  test_generator.py  test_init_project.py  test_inspector.py  test_metrics.py  test_mock.py  test_parser.py  test_policy.py  test_rate_limit.py  test_response_validation.py  test_retry.py  test_router.py  test_routing_eval.py  test_safety.py  test_smoke.py  test_tool_generator.py  test_tool_selection.py  test_validation.py  test_watchdog.py
