[project]
name = "mcpgen"
version = "0.5.0"
description = "Safe-by-default MCP-style tool server generator from OpenAPI specs."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Breezy Kalama" },
]
dependencies = [
    "fastapi>=0.110.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "typer>=0.12.0",
    "uvicorn>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
semantic = [
    "sentence-transformers>=2.7.0",
]

[project.scripts]
mcpgen = "mcpgen.cli.main:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mcpgen*"]
