[project]
name = "openapi-mcpgen"
version = "1.6.0"
description = "Generate secure, policy-aware MCP servers from OpenAPI specs."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Breezy Kalama" },
]
keywords = ["mcp", "openapi", "fastapi", "ai-tools", "tool-generation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "fastapi>=0.110.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "typer>=0.12.0",
    "uvicorn>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
semantic = [
    "sentence-transformers>=2.7.0",
]

[project.scripts]
mcpgen = "mcpgen.cli.main:app"

[project.urls]
Homepage = "https://github.com/breezykalama/mcpgen"
Repository = "https://github.com/breezykalama/mcpgen"
Issues = "https://github.com/breezykalama/mcpgen/issues"
Changelog = "https://github.com/breezykalama/mcpgen/blob/main/CHANGELOG.md"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mcpgen*"]
